Finalizing positions and attributes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- Header -->
     <header>
         
-           <!--<img src="comps/focus.jpg"  alt="bckgrnd-image">-->
+           <img src="comps/focus.jpg"  alt="bckgrnd-image">
         <div class="background">
               <img src="img/large-banner-image.png"  alt="Background-image">
         </div>   
